3. When using ["<app>", "playlist", "add/insert/play", "menu:<app>",...] and
   have a favorites_url, then replace with ["playlist, "add/insert/play",
   "favorites_url"]. Fixes SoundCloud.
4. Allow multiple favourites and playlists to be removed/deleted.
5. When used on a mobile device, clicking on 'browse' bottom navigation button
   will go back in browse history.

0.3.2
-----
 1. Support ratings via TrackStat plugin.
 2. Don't show play actions unless an item has params with item_id.
 3. Add support for CD player plugin.
 4. Only show volume label in mobile view if player is on (as per the volume
    button).
 5. Fix white background to grid items with light theme.
 6. Only clear browse history (i.e. go to Home first) when 'More' action is
    called from queue or now playing.
 7. Fix elliding of subtoolbar title.
 8. Fix paddding in manage players dialog.
 9. Show ellipsis in desktop bottom toolbar for empty sub text if have main
    text.
10. When sorting favorites, don't sort genre, artist, album, or track lists.
11. Fix playing an album from favourites by using the subtoolbar actions.
12. Add volume step setting; 1%, 2%, 5%, or 10%
13. Make 'show track number' in queue a config option of material, and not from
    main LMS settings.
14. Add 'show track number' for now playing.
15. Add context menu to now-platying image with item to show full size image.
16. Only top-level groups can be collapsed.
17. Only show notification and lock screen controls when there is a track
    playing.
18. Show sync status in main toolbar.
19. Show sync, and sleep, status in manage players dialog.
20. If player is synced to another, show its sync master name in manage
    players dialog.
21. Remove 'Search' entry from top-level library list, and replace with a
    search button to right of 'My Music' header.
22. When run under Android, add menu option to start 'SB Player'

0.3.1
-----
1. Fix missing params on certain requests.
2. Fix incorrect item count display.