@@ -228,6 +228,11 @@ function parseBrowseResp(data, parent, options, idStart, cacheKey) {
                     resp.total--;
                     return;
                 }
+                if (resp.items.length==resp.total-1 && i.type=="playlist" && i['icon-id']=='html/images/albums.png') {
+                    // Remove 'All Songs' entry
+                    resp.total--;
+                    return;
+                }
                 var addedPlayAction = false;
 
                 if ("text"==i.type) {
@@ -284,8 +289,8 @@ function parseBrowseResp(data, parent, options, idStart, cacheKey) {
                         i.title = (num>9 ? num : ("0" + num))+" "+text;
                     }
 
-                    if (!isMore && ((i.params && (i.params.item_id || i.params.track || i.params.track_id))) ||
-                                   ((i.commonParams && (i.commonParams.item_id || i.commonParams.track || i.commonParams.track_id)))) {
+                    if (!isMore && ((i.params && (i.params.item_id || i.params.track || i.params.track_id || i.params.album_id || i.params.artist_id))) ||
+                                   ((i.commonParams && (i.commonParams.item_id || i.commonParams.track || i.commonParams.track_id || i.commonParams.album_id || i.commonParams.artist_id)))) {
                         if (playAction) {
                             i.menuActions.push(PLAY_ACTION);
                             addedPlayAction = true;
